2011-08-27  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed gardening.

        * platform/qt/Skipped: Remove a non-existent test.
        * platform/qt/fast/text/complex-preferred-logical-widths-expected.png: Added.
        * platform/qt/fast/text/complex-preferred-logical-widths-expected.txt: Added.

2011-08-26  Xiaomei Ji  <xji@chromium.org>

        Regression(91788): Bad cast in WebCore::blockWithNextLineBox
        https://bugs.webkit.org/show_bug.cgi?id=66090

        Reviewed by Ryosuke Niwa.

        * editing/selection/move-by-word-visually-crash-test-1-expected.txt: Added.
        * editing/selection/move-by-word-visually-crash-test-1.html: Added.
        * editing/selection/move-by-word-visually-crash-test-2-expected.txt: Added.
        * editing/selection/move-by-word-visually-crash-test-2.html: Added.
        * editing/selection/move-by-word-visually-crash-test-3-expected.txt: Added.
        * editing/selection/move-by-word-visually-crash-test-3.html: Added.
        * editing/selection/move-by-word-visually-crash-test-4-expected.txt: Added.
        * editing/selection/move-by-word-visually-crash-test-4.html: Added.
        * editing/selection/move-by-word-visually-multi-line-expected.txt:
        * editing/selection/resources/move-by-word-visually.js:
        (runMoveLeftRight):

2011-08-26  Gavin Barraclough  <barraclough@apple.com>

        DFG JIT - ArithMod may clobber operands.
        https://bugs.webkit.org/show_bug.cgi?id=67085

        Reviewed by Sam Weinig.

        Added test case.

        * fast/js/mod-crash-expected.txt:
        * fast/js/script-tests/mod-crash.js:
        (nonSpeculativeModReuseInner):
        (nonSpeculativeModReuse):

2011-08-26  Anna Cavender  <annacc@chromium.org>

        Cleanup resulting text of media/track tests.
        https://bugs.webkit.org/show_bug.cgi?id=67073

        Reviewed by Eric Carlson.

        * media/track/track-webvtt-tc001-utf8-expected.txt: