@@ -1,0 +1,20 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x42
+  RenderBlock {HTML} at (0,0) size 800x42
+    RenderBody {BODY} at (8,8) size 784x26
+      RenderTextControl {INPUT} at (2,2) size 246x22
+        RenderDeprecatedFlexibleBox {DIV} at (2,2) size 242x18
+          RenderBlock {DIV} at (0,0) size 226x18
+      RenderText {#text} at (250,4) size 4x17
+        text run at (250,4) width 4: " "
+      RenderTextControl {INPUT} at (256,2) size 246x22
+        RenderDeprecatedFlexibleBox {DIV} at (2,2) size 242x18
+          RenderBlock {DIV} at (0,0) size 226x18
+      RenderText {#text} at (0,0) size 0x0
+layer at (12,12) size 226x18
+  RenderBlock {DIV} at (0,0) size 226x18
+layer at (266,12) size 226x18
+  RenderBlock {DIV} at (0,0) size 226x18
+layer at (240,10) size 16x22
+  RenderBlock (relative positioned) {DIV} at (228,-2) size 16x22
